<resources>
    <string name="app_name">My Wallpaper</string>

    <string name="drawer_featured">Featured</string>
    <string name="drawer_new">New</string>
    <string name="drawer_collections">Collections</string>
    <string name="drawer_photos">Photos</string>
    <string name="drawer_likes">Likes</string>
    <string name="drawer_users">Users</string>
    <string name="drawer_photo_editor">Photo Editor</string>
    <string name="drawer_clear_cache">Clear Cache (%1$s MB)</string>
    <string name="drawer_setting">Setting</string>

    <string name="menu_search">Search</string>
    <string name="menu_sort">Sort by</string>
    <string name="menu_item_latest">Latest</string>
    <string name="menu_item_oldest">Oldest</string>
    <string name="menu_item_popular">Popular</string>
    <string name="menu_item_all">All</string>
    <string name="menu_item_featured">Featured</string>

    <string name="error">Error</string>
    <string name="error_http">Sorry</string>
    <string name="error_http_subtitle">We seem to be out of requests for this hour\n\nPlease try again later</string>
    <string name="error_network">Sorry</string>
    <string name="error_network_subtitle">There seems to be a problem with your internet</string>

    <string name="edit_collection">Edit collection</string>
    <string name="action_share">Share</string>
    <string name="action_view_on_unsplash">Open in browser</string>

    <string name="no_information">No information</string>

    <string name="search_hint">Search</string>
    <string name="action_clear_text">Clear text</string>
    <string name="no_results">There are nothing here</string>
    <string-array name="search_options">
        <item>All</item>
        <item>Landscape</item>
        <item>Portrait</item>
        <item>Squarish</item>
    </string-array>

    <string name="stats">Stats</string>
    <string name="photo_info">Info</string>
    <string name="set_as_wallpaper">Set as wallpaper</string>
    <string name="download">Download</string>
    <string name="save">Save</string>
    <string name="likes">%1$s likes</string>
    <string name="downloads">%1$s downloads</string>
    <string name="setting_wallpaper">Setting wallpaper</string>
    <string name="cancel">Cancel</string>

    <string name="done">Done</string>
    <string name="opacity">Opacity</string>
    <string name="brush">Brush</string>
    <string name="edit_tool_brush">Brush</string>
    <string name="edit_tool_add_text">Add text</string>
    <string name="edit_tool_eraser">Eraser</string>
    <string name="edit_tool_filter">Filter</string>
    <string name="edit_tool_emoji">Emoji</string>

    <string name="download_started_message">Download started</string>
    <string name="download_finished_message">Download finished</string>
    <string name="download_fail_message">"This photo has already been downloaded"</string>
    <string name="cache_clear_message">"Cache cleared"</string>
    <string name="save_message">"Are you want to save this photo?"</string>
    <string name="yes">"Yes"</string>
    <string name="no">"No"</string>
</resources>
