<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/actionSearch"
        android:icon="?attr/searchIcon"
        android:title="@string/menu_search"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/actionSort"
        android:icon="?attr/sortIcon"
        android:title="@string/menu_sort"
        app:showAsAction="ifRoom">

        <menu>
            <group android:checkableBehavior="none">
                <item
                    android:id="@+id/menuItemFeaturedLatest"
                    android:icon="?attr/newIcon"
                    android:title="@string/menu_item_latest" />
                <item
                    android:id="@+id/menuItemFeaturedOldest"
                    android:icon="?attr/oldIcon"
                    android:title="@string/menu_item_oldest" />
                <item
                    android:id="@+id/menuItemFeaturedPopular"
                    android:icon="?attr/hotIcon"
                    android:title="@string/menu_item_popular" />
                <item
                    android:id="@+id/menuItemNewLatest"
                    android:icon="?attr/newIcon"
                    android:title="@string/menu_item_latest" />
                <item
                    android:id="@+id/menuItemNewOldest"
                    android:icon="?attr/oldIcon"
                    android:title="@string/menu_item_oldest" />
                <item
                    android:id="@+id/menuItemNewPopular"
                    android:icon="?attr/hotIcon"
                    android:title="@string/menu_item_popular" />
                <item
                    android:id="@+id/menuItemAll"
                    android:icon="?attr/mountainIcon"
                    android:title="@string/menu_item_all" />
                <item
                    android:id="@+id/menuItemCurated"
                    android:icon="?attr/heartIcon"
                    android:title="@string/menu_item_curated" />
                <item
                    android:id="@+id/menuItemFeatured"
                    android:icon="?attr/starCircleIcon"
                    android:title="@string/menu_item_featured" />
            </group>
        </menu>

    </item>

</menu>
