<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/actionSort"
        android:icon="?attr/sortIcon"
        android:title="@string/menu_sort"
        app:showAsAction="ifRoom">

        <menu>
            <group android:checkableBehavior="none">
                <item
                    android:id="@+id/menuItemAll"
                    android:icon="?attr/mountainIcon"
                    android:title="@string/menu_item_all" />
                <item
                    android:id="@+id/menuItemCurated"
                    android:icon="?attr/heartIcon"
                    android:title="@string/menu_item_curated" />
                <item
                    android:id="@+id/menuItemFeatured"
                    android:icon="?attr/starCircleIcon"
                    android:title="@string/menu_item_featured" />
            </group>
        </menu>

    </item>

</menu>
