<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fab="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.sun.mywallpaper.viewmodel.PhotoViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.Light">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolBar"
                style="@style/ToolbarTheme"
                app:layout_scrollFlags="scroll|snap" />

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?attr/colorPrimary"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/dp_16">

                <ImageView
                    android:id="@+id/imagePhoto"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/app_name"
                    android:scaleType="fitCenter"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/imageUser"
                    android:layout_width="@dimen/dp_24"
                    android:layout_height="@dimen/dp_24"
                    android:layout_marginStart="@dimen/dp_16"
                    android:layout_marginTop="@dimen/dp_8"
                    android:layout_marginBottom="@dimen/dp_8"
                    android:contentDescription="@string/app_name"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/imagePhoto" />

                <TextView
                    android:id="@+id/textUserName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_16"
                    android:layout_marginTop="@dimen/dp_8"
                    android:layout_marginBottom="@dimen/dp_8"
                    android:textColor="?attr/primaryTextColor"
                    android:textSize="@dimen/sp_16"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@id/imageUser"
                    app:layout_constraintTop_toBottomOf="@id/imagePhoto" />

                <ImageButton
                    android:id="@+id/buttonLike"
                    android:layout_width="@dimen/dp_24"
                    android:layout_height="@dimen/dp_24"
                    android:layout_marginTop="@dimen/dp_8"
                    android:layout_marginEnd="@dimen/dp_16"
                    android:layout_marginBottom="@dimen/dp_8"
                    android:adjustViewBounds="true"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/app_name"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_favorite_border_black_24dp"
                    app:layout_constraintEnd_toStartOf="@id/buttonBookmark"
                    app:layout_constraintTop_toBottomOf="@id/imagePhoto" />

                <ImageButton
                    android:id="@+id/buttonBookmark"
                    android:layout_width="@dimen/dp_24"
                    android:layout_height="@dimen/dp_24"
                    android:layout_marginTop="@dimen/dp_8"
                    android:layout_marginEnd="@dimen/dp_16"
                    android:layout_marginBottom="@dimen/dp_8"
                    android:adjustViewBounds="true"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/app_name"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_bookmark_border_black_24dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/imagePhoto" />

                <TextView
                    android:id="@+id/textPhotoStoryTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_16"
                    android:layout_marginTop="@dimen/dp_8"
                    android:layout_marginEnd="@dimen/dp_16"
                    android:layout_marginBottom="@dimen/dp_8"
                    android:textColor="?attr/primaryTextColor"
                    android:textSize="@dimen/sp_16"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/imageUser" />

                <TextView
                    android:id="@+id/textPhotoDescription"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_16"
                    android:layout_marginTop="@dimen/dp_8"
                    android:layout_marginEnd="@dimen/dp_16"
                    android:layout_marginBottom="@dimen/dp_8"
                    android:textColor="?attr/primaryTextColor"
                    android:textSize="@dimen/sp_16"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textPhotoStoryTitle" />

                <TextView
                    android:id="@+id/textPhotoLocation"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_16"
                    android:layout_marginTop="@dimen/dp_16"
                    android:layout_marginEnd="@dimen/dp_16"
                    android:layout_marginBottom="@dimen/dp_16"
                    android:drawableStart="?attr/locationIcon"
                    android:drawablePadding="@dimen/dp_8"
                    android:textColor="?attr/primaryTextColor"
                    android:textSize="@dimen/sp_16"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textPhotoDescription" />

                <TextView
                    android:id="@+id/textPhotoCreatedAt"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_16"
                    android:layout_marginTop="@dimen/dp_16"
                    android:layout_marginEnd="@dimen/dp_16"
                    android:layout_marginBottom="@dimen/dp_16"
                    android:drawableStart="?attr/calendarIcon"
                    android:drawablePadding="@dimen/dp_8"
                    android:textColor="?attr/primaryTextColor"
                    android:textSize="@dimen/sp_16"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textPhotoLocation" />

                <TextView
                    android:id="@+id/textPhotoLikes"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_16"
                    android:layout_marginTop="@dimen/dp_16"
                    android:layout_marginEnd="@dimen/dp_16"
                    android:layout_marginBottom="@dimen/dp_16"
                    android:drawableStart="?attr/heartIcon"
                    android:drawablePadding="@dimen/dp_8"
                    android:textColor="?attr/primaryTextColor"
                    android:textSize="@dimen/sp_16"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textPhotoCreatedAt" />

                <TextView
                    android:id="@+id/textPhotoDownloads"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_16"
                    android:layout_marginTop="@dimen/dp_16"
                    android:layout_marginEnd="@dimen/dp_16"
                    android:layout_marginBottom="@dimen/dp_16"
                    android:drawableStart="?attr/downloadIcon"
                    android:drawablePadding="@dimen/dp_8"
                    android:textColor="?attr/primaryTextColor"
                    android:textSize="@dimen/sp_16"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textPhotoLikes" />

                <TextView
                    android:id="@+id/textPhotoColor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_16"
                    android:layout_marginTop="@dimen/dp_16"
                    android:layout_marginBottom="@dimen/dp_16"
                    android:drawableStart="?attr/paletteIcon"
                    android:drawablePadding="@dimen/dp_8"
                    android:textColor="?attr/primaryTextColor"
                    android:textSize="@dimen/sp_16"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textPhotoDownloads" />

                <ImageView
                    android:id="@+id/imagePhotoColor"
                    android:layout_width="@dimen/dp_12"
                    android:layout_height="@dimen/dp_12"
                    android:layout_marginStart="@dimen/dp_16"
                    android:layout_marginEnd="@dimen/dp_16"
                    android:contentDescription="@string/app_name"
                    app:layout_constraintBottom_toBottomOf="@id/textPhotoColor"
                    app:layout_constraintStart_toEndOf="@id/textPhotoColor"
                    app:layout_constraintTop_toTopOf="@id/textPhotoColor" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

        <com.github.clans.fab.FloatingActionMenu
            android:id="@+id/fabMenu"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="end|bottom"
            android:elevation="@dimen/dp_6"
            android:paddingLeft="@dimen/dp_10"
            android:paddingRight="@dimen/dp_10"
            android:paddingBottom="@dimen/dp_10"
            app:menu_colorNormal="?attr/fabColor"
            fab:menu_backgroundColor="?attr/menuBackgroundColor"
            fab:menu_colorPressed="?attr/fabColor"
            fab:menu_icon="@drawable/ic_add_white_24dp"
            fab:menu_labels_ellipsize="end"
            fab:menu_labels_singleLine="true">

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/fabStats"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_timeline_white_24dp"
                fab:fab_colorNormal="?attr/fabColor"
                fab:fab_colorPressed="?attr/fabColor"
                fab:fab_label="@string/stats"
                fab:fab_size="mini" />

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/fabInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_info_outline_white_24dp"
                fab:fab_colorNormal="?attr/fabColor"
                fab:fab_colorPressed="?attr/fabColor"
                fab:fab_label="@string/photo_info"
                fab:fab_size="mini" />

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/fabWallpaper"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_wallpaper_white_24dp"
                fab:fab_colorNormal="?attr/fabColor"
                fab:fab_colorPressed="?attr/fabColor"
                fab:fab_label="@string/set_as_wallpaper"
                fab:fab_size="mini" />

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/fabDownload"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_file_download_white_24dp"
                fab:fab_colorNormal="?attr/fabColor"
                fab:fab_colorPressed="?attr/fabColor"
                fab:fab_label="@string/download"
                fab:fab_size="mini" />
        </com.github.clans.fab.FloatingActionMenu>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>
